--- a/index.html
+++ b/index.html
@@ -540,6 +540,12 @@
     </section>
     <!-- End Our Latest Blog Area -->
 
+    <!-- Map -->
+    <div class="contact_map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.65107988653!2d36.5177334104462!3d-1.3031873859975642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1754660824440!5m2!1sen!2ske"></iframe>
+    </div>
+    <!-- End Map -->
+
     
 
     <!-- Footer Area -->
