--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div data-thumb="images/slider-2.jpg" data-src="images/slider-2.jpg">
                 <div class="camera_caption">
                    <div class="container">
-                        <h5 class=" wow fadeInUp animated">Jaytech Systems</h5>
+                        <h5 class=" wow fadeInUp animated">Jaytech Fire Equipment & Security Systems</h5>
                         <h3 class=" wow fadeInUp animated" data-wow-delay="0.5s">We Deliver efficient and superior after-sales service and fire safety training.</h3>
                    </div>
                 </div>
@@ -173,7 +173,7 @@
     <section class="about_us_area about_us_2 row" id="aboutus">
         <div class="container">
             <div class="tittle wow fadeInUp">
-                <h2>Welcome to Jaytech Systems</h2>
+                <h2>Welcome to Jaytech Fire Equipment & Security Systems</h2>
             </div>
             <div class="row about_row">
                 <div class="who_we_area col-md-7">
