--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <p>Portable Fire Extingushers, Fire Delivery Hoses, Fire Blanket, Landing Valves, Electric
                             Fence,
                             Fire Hose reels, Fire Bells(siren), Fire Signage, Fire Alarm System, Fire Suppression
-                            System,
+                            System, surveillance, hose reels & delivery hoses (canvas and rubber), smoke detectors, lpg detectors, carbon monoxide detectors,
                             CCTV Cameras, Electric Fence
                         </p>
                     </div>
