--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <!-- Slider area -->
     <section class="slider_area row m0">
         <div class="slider_inner">
-            <div data-thumb="images/slider-1.jpg" data-src="images/slider-1.jpg">
+            <div data-thumb="images/home-1.png" data-src="images/home-1.png">
                 <div class="camera_caption">
                     <div class="container">
                         <h5 class=" wow fadeInUp animated">Welcome to Jaytech Fire Security Systems</h5>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div data-thumb="images/slider-2.jpg" data-src="images/slider-2.jpg">
+            <div data-thumb="images/home-2.png" data-src="images/home-2.png">
                 <div class="camera_caption">
                     <div class="container">
                         <h5 class=" wow fadeInUp animated">Jaytech Fire Security Systems</h5>
@@ -542,7 +542,7 @@
             <h2>Our Gallery</h2>
         </div>
         <div class="featured_gallery">
-            <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
+            <!-- <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
                 <img src="images/gallery/1.jpg" alt="">
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
@@ -565,7 +565,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
                 <img src="images/gallery/8.jpg" alt="">
-            </div>
+            </div> -->
             <div class="col-md-3 col-sm-4 col-xs-6 gallery_iner p0">
                 <img src="images/gallery/9.jpg" alt="">
             </div>
