--- a/index.html
+++ b/index.html
@@ -403,28 +403,28 @@
             <div class="row team_row">
                 <div class="col-md-3 col-sm-6 wow fadeInUp">
                     <div class="team_membar">
-                        <img src="images/team.jpg" alt="">
+                        <img src="images/team-1.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Staff 1</a>
-                            <h6>Founder &amp; CEO</h6>
+                            <a href="#" class="name">Justus M.</a>
+                            <h6>Operations Head</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="team_membar">
-                        <img src="images/team.jpg" alt="">
+                        <img src="images/team-2.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Staff 2</a>
-                            <h6>IT Consultant</h6>
+                            <a href="#" class="name">Faith N.</a>
+                            <h6>Business Development</h6>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team_membar">
-                        <img src="images/team.jpg" alt="">
+                        <img src="images/team-3.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Staff 3</a>
-                            <h6>Transport</h6>
+                            <a href="#" class="name">Japheth N.</a>
+                            <h6>Fire Systems & Cctv Technician</h6>
                         </div>
                     </div>
                 </div>
@@ -432,8 +432,8 @@
                     <div class="team_membar">
                         <img src="images/team.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Staff 4</a>
-                            <h6>Support</h6>
+                            <a href="https://eyern.dev" class="name">Staff 4</a>
+                            <h6>IT Support</h6>
                         </div>
                     </div>
                 </div>
