--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
             <div class="row team_row">
                 <div class="col-md-3 col-sm-6 wow fadeInUp">
                     <div class="team_membar">
-                        <img src="images/team-1.jpg" alt="">
+                        <img src="images/team-4.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Justus M.</a>
-                            <h6>Operations Head</h6>
+                            <a href="#" class="name">Denis M.</a>
+                            <h6>CEO</h6>
                         </div>
                     </div>
                 </div>
@@ -430,10 +430,10 @@
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team_membar">
-                        <img src="images/team.jpg" alt="">
+                        <img src="images/team-1.jpg" alt="">
                         <div class="team_content">
-                            <a href="https://eyern.dev" class="name">Staff 4</a>
-                            <h6>IT Support</h6>
+                            <a href="#" class="name">Justus M.</a>
+                            <h6>Operations Head</h6>
                         </div>
                     </div>
                 </div>
