--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     <div class="team_membar">
                         <img src="images/team-1.jpg" alt="">
                         <div class="team_content">
-                            <a href="#" class="name">Justus M.</a>
+                            <a href="#" class="name">Dann K.</a>
                             <h6>Operations Head</h6>
                         </div>
                     </div>
