--- a/index.html
+++ b/index.html
@@ -676,9 +676,9 @@
                     <img src="images/footer-logo.png" alt="">
                     <p>Let's connect! Follow us on our socials below.</p>
                     <ul class="socail_icon">
-                        <li><a href="https://x.com/JaytechKe?t=fpuksh5sPRhyqHlcPnd-hg&s=09"><i
+                        <li><a href="https://www.facebook.com/share/1ALF7vicLb/"><i
                                     class="fa-brands fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="Facebook https://www.facebook.com/share/1ALF7vicLb/"><i
+                        <li><a href="https://x.com/JaytechKe?t=fpuksh5sPRhyqHlcPnd-hg&s=09"><i
                                     class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.instagram.com/jaytechke?igsh=bnY0c3pueXB3bzM="><i
                                     class="fa-brands fa-instagram" aria-hidden="true"></i></a></li>
