--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     <address>
                         <p>Got any questions, comments or just want to say hello?</p>
                         <ul class="my_address">
-                            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>jaytechfire@gmail.com</a>
+                            <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>info@jaytechsystems.co.ke</a>
                             </li>
                             <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>0708-082-082 /
                                     0736-062-630</a></li>
